--- a/dato1.html
+++ b/dato1.html
@@ -15,7 +15,7 @@
                        <marquee direction="right"><font size=10 color="red" align="center" face="fantasy">NIVEL: LICENCIATURA </marquee><dr><dr><dr>
    </font>
 <marquee><img src="img/vero.jpg" width="500" height="500"></marquee>
-<CENTER><a href="index.html"><font size="15" color="white ">REGRESAR</a></font><dr>
+<CENTER><a href="index.html"><font size="15" color="black ">REGRESAR</a></font><dr>
 </font/>
    <dr>
   </body>
